<resources>
    <string name="app_name">DabChat</string>
    <!-- Login -->
    <string name="frontLogin">Login</string>
    <string name="frontPassword">Password</string>
    <string name="frontE_mail">E-mail</string>
    <string name="titleLogin">Login</string>
    <string name="title_login_feature">Login</string>
    <string name="register">Register</string>

    <!-- Register-->
    <string name="e_mail_register">e-mail</string>
    <string name="phonenumber_register">Phonenumber</string>
    <string name="password_register">Password</string>
    <string name="password_repeat_register">Password repeat</string>
    <string name="register_form">Register Form</string>


    <!--Upload-->
    <string name="upload_btn">Browse</string>
    <string name="dank_view">Dankupload</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="add_friend">Add Friend</string>
    <string name="background_channel_name">DabChat Notification</string>
    <string name="background_channel_description">This is the notification channel that informs the user, that they have received new messages.</string>
    <string name="friend_added">Friend added successfully!</string>
    <string name="full_image">Full image</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="friend_s_email">Friend\'s Email</string>
    <string name="preview">preview</string>
    <string name="download_messages">Download Messages</string>
    <string name="registerSuccess">User registered</string>
    <string name="failedRegister">Failed to register user</string>
    <string name="ServiceUnavailable">Service unavailable</string>
    <string name="LoginSuccess">Login Successfully</string>
    <string name="LoginFail">Failed to login</string>
    <string name="messageUploadId">message</string>
    <string name="uploadStarted">Upload started</string>
    <string name="uploadFinish">Upload finished!</string>
    <string name="uriUploadID">uriUpload</string>
</resources>
