<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/loginProgress"
        android:layout_width="@dimen/LoginProgresbarWidth"
        android:layout_height="@dimen/LoginProgressBarHeight"
        android:layout_marginTop="@dimen/LoginTextViewMarginTop"
        android:layout_marginEnd="@dimen/LoginProgressBarMarginEnd"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/usernameLogin"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/LoginTextViewMarginTop"
        android:text="@string/titleLogin"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
        android:textSize="@dimen/TitleTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="@dimen/LoginEmailEditTextWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/LoginEmailMarginTop"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/frontE_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="@dimen/LoginPasswordEditTextWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/LoginPasswordMarginTop"
        android:ems="10"
        android:hint="@string/frontPassword"
        android:importantForAutofill="no"
        android:inputType="textAutoCorrect|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLogin"
        tools:targetApi="o" />

    <Button
        android:id="@+id/loginRegisterBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/LoginRegisterMarginTop"
        android:layout_marginEnd="@dimen/LoginRegisterMarginEnd"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/LoginLoginMarginStart"
        android:layout_marginTop="@dimen/LoginLoginMarginEnd"
        android:textSize="@dimen/StandardButtonTextSize"
        android:text="@string/frontLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>