<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/upload_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/upload_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/StandardButtonMarginStart"
        android:layout_marginBottom="8dp"
        android:text="@string/upload_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/UploadTextViewMarginStart"
        android:layout_marginTop="@dimen/UploadTextViewMarginTop"
        android:text="@string/dank_view"
        android:textSize="@dimen/UploadTextViewTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/StandardButtonMarginEnd"
        android:layout_marginBottom="8dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/button_add_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/StandardButtonMarginTop"
        android:layout_marginEnd="@dimen/StandardButtonMarginEnd"
        android:text="@string/add_friend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preview" />

    <ImageView
        android:id="@+id/preview"
        android:layout_width="@dimen/ImagePreviewWidth"
        android:layout_height="@dimen/ImagePreviewHeight"
        android:maxHeight="@dimen/ImagePreviewMaxWidth"
        android:maxWidth="@dimen/ImagePreviewMaxHeight"
        android:layout_marginStart="@dimen/ImagePreviewMarginStart"
        android:layout_marginTop="@dimen/ImagePreviewMarginTop"
        android:layout_marginEnd="@dimen/ImagePreviewMarginEnd"
        android:contentDescription="@string/preview"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/textfield_email"
        android:layout_width="@dimen/UploadEditTextEmailWidth"
        android:layout_height="@dimen/UploadEditTextEmailHeight"
        android:layout_marginStart="@dimen/UploadEditTextEmailMarginStart"
        android:layout_marginTop="@dimen/UploadEditTextEmailMarginTop"
        android:layout_marginEnd="@dimen/UploadEditTextEmailMarginEnd"
        android:ems="10"
        android:hint="@string/friend_s_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/button_add_friend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friendRecycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/UploadRecycleViewHeight"
        android:layout_marginStart="@dimen/UploadRecycleViewMarginStart"
        android:layout_marginTop="@dimen/UploadRecycleViewMarginTop"
        android:layout_marginEnd="@dimen/UploadRecycleViewMarginEnd"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/logoutBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfield_email"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/logoutBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/StandardButtonMarginStart"
        android:layout_marginEnd="@dimen/StandardButtonMarginEnd"
        android:layout_marginBottom="8dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/send_button"
        app:layout_constraintStart_toEndOf="@+id/upload_btn" />

    <ProgressBar
        android:id="@+id/progressBarUpload"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/UploadProgressBarMarginStart"
        android:layout_marginTop="@dimen/UploadProgressBarMarginTop"
        android:layout_marginEnd="@dimen/UploadProgressBarMarginEnd"
        app:layout_constraintEnd_toStartOf="@+id/preview"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>