<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterFragment">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/RegisterTextViewWidth"
        android:layout_marginStart="@dimen/RegisterTextViewStart"
        android:layout_marginTop="@dimen/RegisterTextViewTop"
        android:layout_marginEnd="@dimen/RegisterTextViewEnd"
        android:text="@string/register_form"
        android:textSize="@dimen/RegisterTextViewSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_repeat_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/StandardEditTextMarginStart"
        android:layout_marginTop="@dimen/StandardEditTextMarginTop"
        android:layout_marginEnd="@dimen/StandardEditTextMarginEnd"
        android:width="@dimen/StandardEditTextWidth"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_repeat_register"
        android:inputType="textPassword"
        android:minWidth="@dimen/StandardEditTextMinWidth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_pw"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/register_e_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/StandardEditTextMarginStart"
        android:layout_marginTop="@dimen/EditTextEmailMarginTop"
        android:layout_marginEnd="@dimen/StandardEditTextMarginEnd"
        android:width="@dimen/StandardEditTextWidth"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/e_mail_register"
        android:inputType="textEmailAddress"
        android:minWidth="@dimen/StandardEditTextMinWidth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/StandardEditTextMarginStart"
        android:layout_marginTop="@dimen/StandardEditTextMarginTop"
        android:layout_marginEnd="@dimen/StandardEditTextMarginEnd"
        android:width="@dimen/StandardEditTextWidth"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phonenumber_register"
        android:inputType="phone"
        android:minWidth="@dimen/StandardEditTextMinWidth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_e_mail"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/register_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/StandardEditTextMarginStart"
        android:layout_marginTop="@dimen/StandardEditTextMarginTop"
        android:layout_marginEnd="@dimen/StandardEditTextMarginEnd"
        android:width="@dimen/StandardEditTextWidth"
        android:ems="10"
        android:hint="@string/password_register"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minWidth="@dimen/StandardEditTextMinWidth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_phone"
        tools:targetApi="o" />

    <Button
        android:id="@+id/registerpage_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/StandardEditTextMarginStart"
        android:layout_marginTop="@dimen/StandardEditTextMarginTop"
        android:layout_marginEnd="@dimen/StandardEditTextMarginEnd"
        android:minWidth="@dimen/StandardEditTextMinWidth"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_repeat_pw" />

    <ProgressBar
        android:id="@+id/registerProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/RegisterProgressBarMarginTop"
        android:layout_marginStart="@dimen/RegisterProgressBarMarginStart"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/registerpage_but"
        app:layout_constraintTop_toBottomOf="@+id/register_repeat_pw" />

</androidx.constraintlayout.widget.ConstraintLayout>